--- a/TMS/TMS/Web.config
+++ b/TMS/TMS/Web.config
@@ -44,6 +44,7 @@
       <add name="ApplicationInsightsWebTracking" type="Microsoft.ApplicationInsights.Web.ApplicationInsightsHttpModule, Microsoft.AI.Web" />
     </httpModules>
     <roleManager enabled="true" />
+    <globalization uiCulture="en" culture="en-GB"/>
   </system.web>
   <system.webServer>
     <modules>
@@ -52,10 +53,10 @@
       <add name="ApplicationInsightsWebTracking" type="Microsoft.ApplicationInsights.Web.ApplicationInsightsHttpModule, Microsoft.AI.Web" preCondition="managedHandler" />
     </modules>
     <validation validateIntegratedModeConfiguration="false" />
-    <httpErrors errorMode="Custom" existingResponse="Replace">
+    <!--<httpErrors errorMode="Custom" existingResponse="Replace">
       <remove statusCode="403" />
       <error statusCode="403" responseMode="ExecuteURL" path="/Error/Error403" />
-    </httpErrors>
+    </httpErrors>-->
   </system.webServer>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
