--- a/TMS/TMS/Web.config
+++ b/TMS/TMS/Web.config
@@ -33,6 +33,7 @@
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
+    <add key="TMSRootPath" value="~/Uploads"/>
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
