--- a/TMS/TMS/Web.config
+++ b/TMS/TMS/Web.config
@@ -28,12 +28,12 @@
   </log4net>
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=.\SQLExpress;Initial Catalog=TMS;Integrated Security=True" providerName="System.Data.SqlClient" />
-    <add name="TMSEntities" connectionString="metadata=res://*/Models.TMSModel.csdl|res://*/Models.TMSModel.ssdl|res://*/Models.TMSModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.\SQLEXPRESS;initial catalog=TMS;user id=sa;password=123456;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="TMSEntities" connectionString="metadata=res://*/Models.TMSModel.csdl|res://*/Models.TMSModel.ssdl|res://*/Models.TMSModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.\SQLExpress;initial catalog=TMS;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
-    <add key="TMSRootPath" value="~/Uploads"/>
+    <add key="TMSRootPath" value="~/Uploads" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
@@ -115,6 +115,5 @@
       <compiler language="vb;vbs;visualbasic;vbscript" extension=".vb" type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.VBCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" warningLevel="4" compilerOptions="/langversion:14 /nowarn:41008 /define:_MYTYPE=\&quot;Web\&quot; /optionInfer+" />
     </compilers>
   </system.codedom>
-  <system.net>
-  </system.net>
+  <system.net></system.net>
 </configuration>
