--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,5 @@
 /TMS/TMS/Logs
 /TMS/TMS/Logs/log.txt
 /TMS/TMS/Uploads/Attachments/20161019173137PM_Capture.PNG
+/TMS/TMS/Uploads/Avatar/f393a532-50a2-4a19-bfe0-30fa08acfe17.PNG
+/TMS/TMS/Web.config
