--- a/TMS/TMS/Web.config
+++ b/TMS/TMS/Web.config
@@ -38,13 +38,7 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
   <system.web>
-    <authentication mode="Forms" >
-      <forms loginUrl="~\Account\Login.cshtml" name=".ASPNETAUTH" protection="None" path="/" timeout="20" >
-      </forms>
-    </authentication>
-    <authorization>
-      <deny users="?"/>
-    </authorization>
+    <authentication mode="None" />
     <compilation debug="true" targetFramework="4.5.2" />
     <httpRuntime targetFramework="4.5.2" />
     <httpModules>
@@ -53,13 +47,6 @@
     <roleManager enabled="true" />
     <globalization uiCulture="en" culture="en-GB" />
   </system.web>
-  <location path="~/Account/Login.cshtml">
-    <system.web>
-      <authorization>
-        <allow users="*"/>
-      </authorization>
-    </system.web>
-  </location>
   <system.webServer>
     <modules>
       <remove name="FormsAuthentication" />
