--- a/.gitignore
+++ b/.gitignore
@@ -4,9 +4,5 @@
 /TMS/.vs
 /TMS/TMS/Logs
 /TMS/TMS/Logs/log.txt
-/TMS/TMS/Uploads/Attachments/20161019173137PM_Capture.PNG
-/TMS/TMS/Uploads/Avatar/f393a532-50a2-4a19-bfe0-30fa08acfe17.PNG
-/TMS/TMS/Web.config
-/TMS/TMS/Uploads/Attachments/5e3f7715-cefd-41e0-af1e-baed63d59073.PNG
-/TMS/TMS/Uploads/Attachments/4d9c5ce1-2843-49b4-abe1-60104285bad5.png
-/TMS/TMS/Uploads/Attachments/0aef6922-3e14-4ef6-af89-2662a34f6280.png
+/TMS/TMS/Uploads/Avatar/
+/TMS/TMS/Uploads/Attachments
