--- a/TMS/TMS/Web.config
+++ b/TMS/TMS/Web.config
@@ -36,6 +36,7 @@
     <add key="TMSRootPath" value="~/Uploads" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+    <add key="aspnet:MaxJsonDeserializerMembers" value="52428800" />
   </appSettings>
   <system.web>
     <authentication mode="None" />
