--- a/TMS/TMS/TMS.csproj
+++ b/TMS/TMS/TMS.csproj
@@ -227,7 +227,6 @@
     <Compile Include="Controllers\KnowledgeBaseController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
     <Compile Include="Controllers\ProfileController.cs" />
-    <Compile Include="Services\SolutionAttachmentService.cs" />
     <Compile Include="Services\SolutionService.cs" />
     <Compile Include="Controllers\TicketController.cs" />
     <Compile Include="DAL\GenericRepository.cs" />
@@ -635,8 +634,9 @@
     <Content Include="Views\Error\Error500.cshtml" />
     <Content Include="Views\KnowledgeBase\Index.cshtml" />
     <Content Include="Views\Ticket\Solve.cshtml" />
-    <Content Include="Views\KnowledgeBase\CreateKB.cshtml" />
+    <Content Include="Views\KnowledgeBase\Create.cshtml" />
     <Content Include="Views\Ticket\Detail.cshtml" />
+    <Content Include="Views\KnowledgeBase\Edit.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
