--- a/TMS/TMS/TMS.csproj
+++ b/TMS/TMS/TMS.csproj
@@ -402,6 +402,7 @@
     <Content Include="Content\js\jquery.noty.js" />
     <Content Include="Content\js\select2.min.js" />
     <Content Include="Content\js\trunk8.min.js" />
+    <Content Include="Content\knowledgebase\style.css" />
     <Content Include="Content\Plugins\bootstrap-wysihtml5\bootstrap3-wysihtml5.all.js" />
     <Content Include="Content\Plugins\bootstrap-wysihtml5\bootstrap3-wysihtml5.all.min.js" />
     <Content Include="Content\Plugins\bootstrap-wysihtml5\bootstrap3-wysihtml5.css" />
@@ -647,6 +648,8 @@
     <Content Include="Views\KnowledgeBase\CreateKB.cshtml" />
     <Content Include="Views\Ticket\Detail.cshtml" />
     <Content Include="Views\KnowledgeBase\Index.cshtml" />
+    <Content Include="Views\KnowledgeBase\Detail.cshtml" />
+    <Content Include="Views\Shared\KBLayout.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -655,6 +658,9 @@
     <Folder Include="Areas\Admin\Views\Department\" />
     <Folder Include="Areas\HelpDesk\Models\" />
     <Folder Include="Areas\Technician\Models\" />
+    <Folder Include="Content\knowledgebase\css\" />
+    <Folder Include="Content\knowledgebase\images\" />
+    <Folder Include="Content\knowledgebase\js\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
