--- a/TMS/TMS/Web.config
+++ b/TMS/TMS/Web.config
@@ -56,8 +56,8 @@
     </modules>
     <validation validateIntegratedModeConfiguration="false" />
     <!--<httpErrors errorMode="Custom" existingResponse="Replace">
-      <remove statusCode="403" />
-      <error statusCode="403" responseMode="ExecuteURL" path="/Error/Error403" />
+      <remove statusCode="404" />
+      <error statusCode="404" responseMode="ExecuteURL" path="/404.html" />
     </httpErrors>-->
   </system.webServer>
   <runtime>
